fixed page break at certain mobile views only on certain mobile devices when sent via messanger

--- a/css/index.css
+++ b/css/index.css
@@ -448,6 +448,8 @@ main .container .image h2 {
 main .container .image p {
   background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.07));
   color: black;
+  padding: 0px;
+  max-width: 90%;
 }
 main .container .image a {
   margin: 10px;
@@ -551,6 +553,9 @@ main .info {
   margin: 50px;
   width: 50%;
   padding: 20px;
+}
+.main2 .student a {
+  text-decoration: none;
 }
 .main2 .student img {
   width: 60%;
