--- a/less/home-page.less
+++ b/less/home-page.less
@@ -129,6 +129,8 @@ main{
 	p{
 		.bground();
 		color:black;
+		padding:0px;
+		max-width:90%;
 	}
 	a{	margin:10px;
 		text-decoration:none;
@@ -208,6 +210,10 @@ main{
 	.displayFlex(space-evenly,column);
 	align-items:center;
 	.student{
+		a{
+			text-decoration:none;
+			
+		}
 		.displayFlex(center,column);
 		align-items:center;
 		color:black;
